--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 
 [compat]
 BSplineKit = "0.18.2"
@@ -20,6 +21,7 @@ Interpolations = "0.15.1"
 JLD = "0.13.5"
 ProgressBars = "1.5.1"
 SparseArrays = "1.11.0"
+Tensors = "1.16.1"
 julia = "1.6.7"
 
 [extras]
