commit disaster revert1

--- a/Project.toml
+++ b/Project.toml
@@ -5,20 +5,26 @@ version = "1.0.0-DEV"
 
 [deps]
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 
 [compat]
 BSplineKit = "0.18.2"
+DelimitedFiles = "1.9.1"
+FFTW = "1.8.1"
 Ferrite = "1.0.0"
 GLMakie = "0.11.2"
 Interpolations = "0.15.1"
 JLD = "0.13.5"
+PlutoUI = "0.7.23"
 ProgressBars = "1.5.1"
 SparseArrays = "1.11.0"
 Tensors = "1.16.1"
