--- a/Project.toml
+++ b/Project.toml
@@ -10,7 +10,7 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
-JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -23,7 +23,7 @@ FFTW = "1.8.1"
 Ferrite = "1.0.0"
 GLMakie = "0.11.2"
 Interpolations = "0.15.1"
-JLD = "0.13.5"
+JLD2 = "0.5.11"
 PlutoUI = "0.7.23"
 ProgressBars = "1.5.1"
 SparseArrays = "1.11.0"
