--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,16 @@ version = "1.0.0-DEV"
 
 [deps]
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -18,12 +22,16 @@ Tensors = "48a634ad-e948-5137-8d70-aa71f2a747f4"
 
 [compat]
 BSplineKit = "0.18.2"
+BenchmarkTools = "1.6.0"
+CairoMakie = "0.13.1"
 DelimitedFiles = "1.9.1"
 FFTW = "1.8.1"
 Ferrite = "1.0.0"
 GLMakie = "0.11.2"
 Interpolations = "0.15.1"
+IterativeSolvers = "0.9.4"
 JLD2 = "0.5.11"
+LinearAlgebra = "1.11.0"
 PlutoUI = "0.7.23"
 ProgressBars = "1.5.1"
 SparseArrays = "1.11.0"
