--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Ferrite = "c061ca5d-56c9-439f-9c0e-210fe06d3992"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
@@ -28,6 +29,7 @@ DelimitedFiles = "1.9.1"
 FFTW = "1.8.1"
 Ferrite = "1.0.0"
 GLMakie = "0.11.2"
+HDF5 = "0.17.2"
 Interpolations = "0.15.1"
 IterativeSolvers = "0.9.4"
 JLD2 = "0.5.11"
