--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
@@ -33,6 +34,7 @@ HDF5 = "0.17.2"
 Interpolations = "0.15.1"
 IterativeSolvers = "0.9.4"
 JLD2 = "0.5.11"
+LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
 PlutoUI = "0.7.23"
 ProgressBars = "1.5.1"
